[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.0.2"
tokio = { version = "1.30.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

[profile.profiling]
inherits = "release"
debug = true
#rustflags = ["-C", "force-frame-pointers=yes"]